--- a/projeto_android/estilos/style.css
+++ b/projeto_android/estilos/style.css
@@ -23,6 +23,10 @@
     --fonte-sub: 'idroider', sans-serif;
 }
 
+body {
+    background-color: rgb(81, 71, 85);
+}
+
 header {
     padding: 20px;
     background-color: rgb(197, 87, 197);
@@ -55,4 +59,21 @@ header > ul > li {
 header > ul > li > a {
     text-decoration: none;
     color: rgb(166, 241, 175);
+}
+
+section > main {
+    padding: 20px;
+    margin: auto;
+    line-height: 1.5;
+    width: 70vw;
+}
+
+.conteudo {
+    background-color: white;
+}
+
+section > main > h2 {
+    font-family: var(--fonte-sub);
+    background-image: linear-gradient(to right, rgba(128, 0, 128, 0.462), white);
+    padding: 10px;
 }
