--- a/projeto_android/estilos/style.css
+++ b/projeto_android/estilos/style.css
@@ -52,20 +52,32 @@ header > ul {
 
 header > ul > li {
     font-size: 0.8em;
-    padding: 10px;
+    padding: 13px;
     display: inline-block;
 }
 
 header > ul > li > a {
     text-decoration: none;
     color: rgb(166, 241, 175);
+    background-color: rgb(93, 43, 93);
+    padding: 10px;
+    border-radius: 10px 2px;
+}
+
+header > ul > li > a:hover {
+    color: rgb(35, 53, 38);
+    background-color: rgb(247, 213, 247);
+    transition-duration: 0.7s;
+    border-radius: 2px 10px;
 }
 
 section > main {
-    padding: 20px;
+    padding: 10px;
     margin: auto;
-    line-height: 1.5;
-    width: 80vw;
+    line-height: 2.5;
+    width: 85vw;
+    font-family: var(--fonte-padrao);
+    font-size: small;
 }
 
 .conteudo {
@@ -78,12 +90,56 @@ section > main > h2 {
     padding: 10px;
 }
 
-.imagem {
-    margin: auto;
-    padding: 200px;
+section > main > p > a {
+    background-image: linear-gradient(to right, rgba(40, 40, 40, 0.164), rgb(91, 4, 91));
+    padding: 5px;
+    border-radius: 5px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
 }
 
-main > #dandroids {
-    background: url('../imagens/pequenho.png') no-repeat center top fixed;
-    width: 200px;
+div {
+    text-align: center;
+}
+
+img {
+    width: 250px;
+}
+
+.extra {
+    margin: 15px 0px 15px 0px;
+    background-color: rgb(241, 212, 238);
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.extra > p {
+    font-family: var(--fonte-padrao);
+    font-size: small;
+}
+
+.extra > h3 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 5px;
+    box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.397);
+    margin-bottom: 10px;
+}
+
+.extra > ul {
+    font-size: 0.8em;
+    padding: 10px;
+    columns: 2;
+}
+
+.extra > ul > li {
+    margin: ;
+} 
+
+footer {
+    color: white;
+    background-color: black;
+    padding: 6px;
+    font-family: var(--fonte-padrao);
+    font-size: 0.6em;
+    text-align: center;
 }
