--- a/projeto_android/estilos/style.css
+++ b/projeto_android/estilos/style.css
@@ -131,15 +131,28 @@ img {
     columns: 2;
 }
 
-.extra > ul > li {
-    margin: ;
-} 
-
 footer {
     color: white;
     background-color: black;
-    padding: 6px;
+    padding: 7px;
     font-family: var(--fonte-padrao);
     font-size: 0.6em;
     text-align: center;
+}
+
+footer > p > a {
+    color: white;
+    text-decoration: none;
+    padding: 6px;
+}
+
+footer > p > a:hover {
+    border-radius: 2px 6px;
+    transition-duration: 0.6s;
+    color: #000;
+    background-color: rgb(247, 213, 247);
+}
+
+footer > p > a::after {
+    content: ' 🔗';
 }
