--- a/projeto_android/estilos/style.css
+++ b/projeto_android/estilos/style.css
@@ -150,7 +150,7 @@ footer > p > a:hover {
     border-radius: 2px 6px;
     transition-duration: 0.6s;
     color: #000;
-    background-color: rgb(247, 213, 247);
+    background-color: rgba(247, 213, 247, 0.519);
 }
 
 footer > p > a::after {
